feat: created scroll button and script

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -30,3 +30,4 @@
 @import url(./sections/home-5-section/home-5-section.css);
 @import url(./shared/popup-wallet/popup-wallet.css);
 @import url(./shared/card-nft/card-nft.css);
+@import url(./shared/scroll-up-button/scroll-up-button.css);
