Fix: fixed navbar and created media queries

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -31,3 +31,4 @@
 @import url(./shared/popup-wallet/popup-wallet.css);
 @import url(./shared/card-nft/card-nft.css);
 @import url(./shared/scroll-up-button/scroll-up-button.css);
+@import url(./shared/theme-switch/theme-switch.css);
