--- a/css/components/sections/ds-brandColor/ds-brandcolor.css
+++ b/css/components/sections/ds-brandColor/ds-brandcolor.css
@@ -95,4 +95,6 @@
   display: flex;
   padding: 2px 20px;
   font-size: larger;
-}/*# sourceMappingURL=ds-brandcolor.css.map */
+}
+
+/*# sourceMappingURL=ds-brandcolor.css.map */
