--- a/css/components/sections/ds-logos/ds-logos.css
+++ b/css/components/sections/ds-logos/ds-logos.css
@@ -49,4 +49,6 @@
   box-shadow: rgba(0, 0, 0, 0.3);
   border: radius 1px;
   opacity: 0.9;
-}/*# sourceMappingURL=ds-logos.css.map */
+}
+
+/*# sourceMappingURL=ds-logos.css.map */
