--- a/css/components/shared/card-prizes/card-prizes.css
+++ b/css/components/shared/card-prizes/card-prizes.css
@@ -124,4 +124,6 @@
 }
 .card-prizes__button svg {
   fill: white;
-}/*# sourceMappingURL=card-prizes.css.map */
+}
+
+/*# sourceMappingURL=card-prizes.css.map */
