--- a/css/components/sections/ds-icons/ds-icons.css
+++ b/css/components/sections/ds-icons/ds-icons.css
@@ -85,4 +85,6 @@
   border-radius: 35px;
   padding: 5px;
   box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}/*# sourceMappingURL=ds-icons.css.map */
+}
+
+/*# sourceMappingURL=ds-icons.css.map */
