--- a/css/components/sections/home-3-section/home-3-section.css
+++ b/css/components/sections/home-3-section/home-3-section.css
@@ -34,10 +34,15 @@
 .section-3 .divider {
   position: absolute;
   top: 0;
+  width: 100%;
+  display: flex;
+  align-self: flex-start;
 }
 .section-3 .divider svg {
   fill: #d8cbed;
   width: 100%;
+  height: 100%;
+  max-height: 48px;
 }
 .section-3 .paragraph {
   font-size: 18px;
