--- a/css/components/sections/home-3-section/home-3-section.scss
+++ b/css/components/sections/home-3-section/home-3-section.scss
@@ -36,9 +36,14 @@
   .divider {
     position: absolute;
     top: 0;
+    width: 100%;
+    display: flex;
+    align-self: flex-start;
     svg {
       fill: #d8cbed;
       width: 100%;
+      height: 100%;
+      max-height: 48px;
     }
   }
 
