--- a/css/components/shared/dropdown/dropdown.css
+++ b/css/components/shared/dropdown/dropdown.css
@@ -1,7 +1,5 @@
 .dropdown {
-  width: -moz-fit-content;
   width: fit-content;
-  height: -moz-fit-content;
   height: fit-content;
 }
 .dropdown .dropbtn {
@@ -11,7 +9,6 @@
   height: 48px;
   display: flex;
   align-items: center;
-  width: -moz-fit-content;
   width: fit-content;
   border-radius: 16px;
   margin: 4px 0;
@@ -39,4 +36,6 @@
 }
 .dropdown:hover .dropdown__content {
   display: flex;
-}/*# sourceMappingURL=dropdown.css.map */
+}
+
+/*# sourceMappingURL=dropdown.css.map */
