--- a/css/components/shared/navbar/navbar.css
+++ b/css/components/shared/navbar/navbar.css
@@ -15,6 +15,7 @@
   transition-timing-function: ease-in-out;
   position: sticky;
   top: 0;
+  border-bottom: 1px solid #e7e3eb;
 }
 .navbar-l, .navbar-r {
   display: flex;
@@ -53,6 +54,9 @@
 }
 .navbar .dropdownbtn__link:hover {
   background-color: #eff4f5;
+}
+.navbar .dropdownbtn__link svg {
+  fill: #7a6eaa;
 }
 .navbar .dropdown__content {
   display: none;
@@ -113,16 +117,6 @@
   -webkit-box-pack: justify;
   justify-content: space-between;
   fill: #7a6eaa;
-}
-.navbar-l__menu .dropdown:nth-child(6) {
-  padding: 1rem;
-  -webkit-box-align: center;
-  align-items: center;
-  fill: #7a6eaa;
-}
-.navbar-l__menu .dropdown:nth-child(6):hover {
-  border-radius: 16px;
-  background-color: #eff4f5;
 }
 .navbar-r {
   margin-left: auto;
