--- a/css/components/shared/navbar/navbar.scss
+++ b/css/components/shared/navbar/navbar.scss
@@ -15,6 +15,7 @@
   transition-timing-function: ease-in-out;
   position: sticky;
   top: 0;
+  border-bottom: 1px solid #e7e3eb;
   &-l,
   &-r {
     display: flex;
@@ -51,6 +52,9 @@
       padding: 0 1rem;
       &:hover {
         background-color: #eff4f5;
+      }
+      svg {
+        fill: #7a6eaa;
       }
     }
     &__content {
@@ -114,16 +118,6 @@
     -webkit-box-pack: justify;
     justify-content: space-between;
     fill: #7a6eaa;
-  }
-  &-l__menu .dropdown:nth-child(6) {
-    padding: 1rem;
-    -webkit-box-align: center;
-    align-items: center;
-    fill: #7a6eaa;
-    &:hover {
-      border-radius: 16px;
-      background-color: #eff4f5;
-    }
   }
   &-r {
     margin-left: auto;
@@ -221,6 +215,7 @@
         height: 2rem;
         font-size: smaller;
         gap: 2px;
+
         a {
           flex-direction: row;
         }
